cloud-infra-macros/tests/fails/env_var_key_too_short.stderr
error: env var key should be at least two characters long
 --> tests/fails/env_var_key_too_short.rs:4:28
  |
4 |     let key = env_var_key!("A");
  |                            ^^^
